Add dynamic regex category rules